core-app/main/default/objects/Asset/fields/Amount_Taxed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Taxed__c</fullName>
    <label>Amount Taxed</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>