core-app/main/default/objects/Asset/fields/Amount_Taxed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Amount_Taxed_Percentage__c</fullName>
    <formula>Amount_Taxed__c /  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Taxed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>