core-app/main/default/objects/Asset/fields/Outstanding_Tax__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Tax__c</fullName>
    <formula>Quantity__c -  Amount_Taxed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outstanding Tax</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>