core-app/main/default/objects/Asset/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <label>Price Per Unit</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>