core-app/main/default/objects/Asset/fields/Quantity_Real_Number__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Real_Number__c</fullName>
    <formula>IF(ISPICKVAL(Status, &apos;Sold&apos;),  -Quantity__c , Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Real Number</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>