core-app/main/default/objects/Asset/recordTypes/Purchase.recordType-meta.xml
<RecordType>
    <fullName>Purchase</fullName>
    <active>true</active>
    <label>Purchase</label>
</RecordType>