core-app/main/default/objects/Asset/recordTypes/Reward.recordType-meta.xml
<RecordType>
    <fullName>Reward</fullName>
    <active>true</active>
    <label>Reward</label>
</RecordType>