core-app/main/default/objects/Asset/listViews/Rewards.listView-meta.xml
<ListView>
    <fullName>Rewards</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Quantity__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ASSET.STATUS</field>
        <operation>equals</operation>
        <value>Reward</value>
    </filters>
    <label>Rewards</label>
</ListView>